fix(example app): fix layout issues on smaller screens

--- a/example-app/src/app/introduction/introduction.component.scss
+++ b/example-app/src/app/introduction/introduction.component.scss
@@ -2,10 +2,12 @@
 
 :host {
   @extend .page;
+  padding: 0 20px;
 }
 
 .mat-card {
   width: 800px;
+  margin: 20px auto;
 }
 
 .mat-card-title {
