--- a/example-app/src/styles/_shared.scss
+++ b/example-app/src/styles/_shared.scss
@@ -1,9 +1,8 @@
 .page {
   flex: 1;
+  height: 100%;
   display: flex;
-  justify-content: center;
   align-items: flex-start;
-  padding: 20px;
   background-color: #DDD;
   overflow: auto;
 }
